; ModuleID = '/home/carl/AnghaBench/php-src/ext/intl/collator/extr_collator_class.c_collator_register_Collator_class.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/intl/collator/extr_collator_class.c_collator_register_Collator_class.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, i32*, i32 }
%struct.TYPE_6__ = type { i32 }

@.str = private unnamed_addr constant [9 x i8] c"Collator\00", align 1
@Collator_class_functions = common dso_local global i32 0, align 4
@Collator_object_create = common dso_local global i32 0, align 4
@Collator_ce_ptr = common dso_local global i32 0, align 4
@Collator_handlers = common dso_local global %struct.TYPE_7__ zeroinitializer, align 8
@std_object_handlers = common dso_local global i32 0, align 4
@Collator_object = common dso_local global i32 0, align 4
@zo = common dso_local global i32 0, align 4
@Collator_objects_free = common dso_local global i32 0, align 4
@E_ERROR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [66 x i8] c"Collator: attempt to create properties on a non-registered class.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @collator_register_Collator_class() #0 {
  %1 = alloca %struct.TYPE_6__, align 4
  %2 = load i32, i32* @Collator_class_functions, align 4
  %3 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %1, i32 0, i32 0
  %4 = load i32, i32* %3, align 4
  %5 = call i32 @INIT_CLASS_ENTRY(i32 %4, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %2)
  %6 = load i32, i32* @Collator_object_create, align 4
  %7 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %1, i32 0, i32 0
  store i32 %6, i32* %7, align 4
  %8 = call i32 @zend_register_internal_class(%struct.TYPE_6__* %1)
  store i32 %8, i32* @Collator_ce_ptr, align 4
  %9 = call i32 @memcpy(%struct.TYPE_7__* @Collator_handlers, i32* @std_object_handlers, i32 24)
  %10 = load i32, i32* @Collator_object, align 4
  %11 = load i32, i32* @zo, align 4
  %12 = call i32 @XtOffsetOf(i32 %10, i32 %11)
  store i32 %12, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @Collator_handlers, i32 0, i32 2), align 8
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @Collator_handlers, i32 0, i32 1), align 8
  %13 = load i32, i32* @Collator_objects_free, align 4
  store i32 %13, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @Collator_handlers, i32 0, i32 0), align 8
  %14 = load i32, i32* @Collator_ce_ptr, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %0
  %17 = load i32, i32* @E_ERROR, align 4
  %18 = call i32 @zend_error(i32 %17, i8* getelementptr inbounds ([66 x i8], [66 x i8]* @.str.1, i64 0, i64 0))
  br label %19

19:                                               ; preds = %16, %0
  ret void
}

declare dso_local i32 @INIT_CLASS_ENTRY(i32, i8*, i32) #1

declare dso_local i32 @zend_register_internal_class(%struct.TYPE_6__*) #1

declare dso_local i32 @memcpy(%struct.TYPE_7__*, i32*, i32) #1

declare dso_local i32 @XtOffsetOf(i32, i32) #1

declare dso_local i32 @zend_error(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
